test/test_suite/errors/error_union.c3
module foo;

optenum Blurg
{
    X, Y, Z
}

fn void main()
{
    anyerr foo;
}